# hangeul-id-cli

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
src/: char_group_parser.cpp  char_group_parser.h  main.cpp
